@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         NEXT-init
-version:      1.04
+version:      1.04.1
 version_from: 
 installdirs:  site
 requires:
